Se agregaron logos en skills

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agustin Diaz Web developer</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/edb1cc2c54.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navbar-->
@@ -18,14 +19,17 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="./pages/skills.html"> Skills</a></li>
                 <li><a href="./pages/experience.html">Experience</a></li>
                 <li><a href="./pages/portfolio.html">Portfolio</a></li>
                 <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
-
+            <span class="btn-menu">
+                <i class="fa fa-bars"></i>
+            </span>
         </nav>
+       
     </header>
     <!--Body-->
     <main class="container-index">
