--- a/pages/skills.html
+++ b/pages/skills.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300&display=swap" rel="stylesheet">
@@ -27,6 +27,15 @@
         </nav>
     </header>
     <main class="container">
+        <img src="../images/html.png" alt="html-logo">
+        <img src="../images/css-3.png" alt="css-logo">
+        <img src="../images/sass.png" alt="sass-logo">
+        <img src="../images/bootstrap.png" alt="bootstrap-logo">
+        <img src="../images/js.png" alt="js-logo">
+        <img src="../images/science.png" alt="react-logo">   
+        <img src="../images/python.png" alt="python-logo">  
+        <img src="../images/git.png" alt="git-logo">
+        <img src="../images/github4.png" alt="github-logo">
 
     </main>
     <footer>
