--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,22 +9,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/edb1cc2c54.js" crossorigin="anonymous"></script>
+    <script src="../js/menu.js"></script>
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">
-            <img src="https://i.picasion.com/pic91/54aaa2fece5b3be1b061a2a85230f3b1.gif" alt="">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./skills.html"> Skills</a></li>
-                <li><a href="./experience.html">Experience</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+    <header>
+        <nav class="menu">
+            <span>LOGO</span>
+            <ul class="menu_items">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="../pages/skills.html"> Skills</a></li>
+                <li><a href="../pages/experience.html">Experience</a></li>
+                <li><a href="../pages/portfolio.html">Portfolio</a></li>
+                <li><a href="../pages/contact.html">Contact</a></li>
             </ul>
-
+            <span class="btn_menu">
+                <i class="fa fa-bars"></i>
+            </span>
         </nav>
+       
     </header>
     <main class="container-index">
 
