--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/edb1cc2c54.js" crossorigin="anonymous"></script>
+    <script src="./js/menu.js"></script>
 </head>
 <body>
     <!-- Navbar-->
-    <header class="navbar">
-        <div class="logo">
-            <img src="https://i.picasion.com/pic91/54aaa2fece5b3be1b061a2a85230f3b1.gif" alt="">
-        </div>
-        <nav>
-            <ul>
+    <header>
+        <nav class="menu">
+            <span>LOGO</span>
+            <ul class="menu_items">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="./pages/skills.html"> Skills</a></li>
                 <li><a href="./pages/experience.html">Experience</a></li>
                 <li><a href="./pages/portfolio.html">Portfolio</a></li>
                 <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
-            <span class="btn-menu">
+            <span class="btn_menu">
                 <i class="fa fa-bars"></i>
             </span>
         </nav>
@@ -62,5 +61,6 @@
         </div>
 
     </footer>
+    
 </body>
 </html>
