--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -17,7 +17,7 @@
         <nav class="menu">
             <span>LOGO</span>
             <ul class="menu_items">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="../index.html">Home</a></li>
                 <li><a href="../pages/skills.html"> Skills</a></li>
                 <li><a href="../pages/experience.html">Experience</a></li>
                 <li><a href="../pages/portfolio.html">Portfolio</a></li>
