--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar-->
     <header>
         <nav class="menu">
-            <span>LOGO</span>
+            <img src="./images/logo.gif" alt="" srcset="">
             <ul class="menu_items">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="./pages/skills.html"> Skills</a></li>
