--- a/pages/skills.html
+++ b/pages/skills.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="menu">
-            <span>LOGO</span>
+            <img src="../images/logo.gif" alt="">
             <ul class="menu_items">
                 <li class="active"><a href="../index.html">Home</a></li>
                 <li><a href="../pages/skills.html"> Skills</a></li>
