--- a/pages/skills.html
+++ b/pages/skills.html
@@ -30,15 +30,15 @@
        
     </header>
     <main class="container">
-        <img src="../images/html.png" alt="html-logo">
-        <img src="../images/css-3.png" alt="css-logo">
-        <img src="../images/sass.png" alt="sass-logo">
-        <img src="../images/bootstrap.png" alt="bootstrap-logo">
-        <img src="../images/js.png" alt="js-logo">
-        <img src="../images/science.png" alt="react-logo">   
-        <img src="../images/python.png" alt="python-logo">  
-        <img src="../images/git.png" alt="git-logo">
-        <img src="../images/github4.png" alt="github-logo">
+        <img src="../images/html.png" alt="html-logo" class="logo-skill">
+        <img src="../images/css-3.png" alt="css-logo"class="logo-skill">
+        <img src="../images/sass.png" alt="sass-logo"class="logo-skill">
+        <img src="../images/bootstrap.png" alt="bootstrap-logo"class="logo-skill">
+        <img src="../images/js.png" alt="js-logo"class="logo-skill">
+        <img src="../images/science.png" alt="react-logo"class="logo-skill">   
+        <img src="../images/python.png" alt="python-logo"class="logo-skill">  
+        <img src="../images/git.png" alt="git-logo"class="logo-skill">
+        <img src="../images/github4.png" alt="github-logo"class="logo-skill">
 
     </main>
     <footer>
