se aplico grid en portfolio

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,34 +31,26 @@
     </header>
     <main class="container-index">
 
-        <div>
-            <div>
+        <div class="grid-container">
+            <div class="fila1-1">
                 <img src="../images/img-18.png" alt="" class="imgAgency">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi totam laudantium perferendis, quaerat neque quia ex sed ea. Impedit tempora itaque odio ipsum quaerat ea doloremque architecto exercitationem, asperiores eius?</p>
             </div>
-            <div>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum corrupti molestiae voluptatem tempora maxime accusantium praesentium aspernatur impedit eius labore voluptate odio soluta, iste ipsam! Praesentium assumenda ullam maiores dolores!
-            </div>
-            <div>
+            <div class="fila1-2">
                 <img src="../images/img-18.png" alt="" class="imgAgency">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ratione voluptas quod voluptates numquam est, excepturi ullam placeat dolor voluptatibus ipsam fugiat consequatur exercitationem, enim consectetur omnis doloremque illum itaque!</p>
             </div>
-            <div>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus ea, hic fugiat soluta velit ipsam ratione vitae dolore corrupti, laborum non distinctio cumque totam ex itaque aliquid? Cumque, ratione fugiat?
+            <div class="fila2-1">
+                <img src="../images/img-18.png" alt="" class="imgAgency">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius blanditiis, perferendis ipsam aliquid nobis illum voluptas praesentium facere odit tenetur cupiditate aspernatur provident nemo sed id distinctio optio enim officiis.</p>
             </div>
-        </div>
+            <div class="fila2-2">
+                <img src="../images/img-18.png" alt="" class="imgAgency">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, perferendis tempore aut cupiditate error incidunt similique ducimus. Iste voluptatibus nulla eius tempore nostrum officiis eveniet quod expedita nam, excepturi itaque!</p>
+            </div>
+            
 
-        <div>
-            <div>
-                <img src="../images/img-18.png" alt="" class="imgAgency">
-            </div>
-            <div>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum corrupti molestiae voluptatem tempora maxime accusantium praesentium aspernatur impedit eius labore voluptate odio soluta, iste ipsam! Praesentium assumenda ullam maiores dolores!
-            </div>
-            <div>
-                <img src="../images/img-18.png" alt="" class="imgAgency">
-            </div>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil maxime nam obcaecati, quibusdam quos facilis minus libero eligendi numquam amet ea, iste fuga fugiat voluptatibus mollitia nisi nostrum quis pariatur.</div>
-
-        </div>
+        
 
 
     </main>
