--- a/pages/skills.html
+++ b/pages/skills.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="menu">
-            <img src="../images/logo.gif" alt="">
+            <a href="../index.html"><img src="../images/logo.gif" alt="logo-agdiaz"></a>
             <ul class="menu_items">
                 <li class="active"><a href="../index.html">Home</a></li>
                 <li><a href="../pages/skills.html"> Skills</a></li>
@@ -26,10 +26,11 @@
             <span class="btn_menu">
                 <i class="fa fa-bars"></i>
             </span>
-        </nav>
-       
+        </nav> 
     </header>
     <main class="container">
+        <h1 class="title-skill">Skills</h1>
+
         <img src="../images/html.png" alt="html-logo" class="logo-skill">
         <img src="../images/css-3.png" alt="css-logo"class="logo-skill">
         <img src="../images/sass.png" alt="sass-logo"class="logo-skill">
