--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -29,6 +29,7 @@
         </nav> 
     </header>
     <main class="container-index">
+        <h1>Portfolio</h1>
 
         <div class="grid-container">
             <div class="fila1-1">
