--- a/pages/skills.html
+++ b/pages/skills.html
@@ -30,16 +30,47 @@
     </header>
     <main class="container">
         <h1 class="title-skill">Skills</h1>
+        <div class="flex-skills">
+            <div>
+                <img src="../images/html.png" alt="html-logo" class="logo-skill">
+                <p class="description-title">HTML</p>   
+            </div>
+            <div>
+                <img src="../images/css-3.png" alt="css-logo"class="logo-skill">
+                <p class="description-title">CSS</p>
 
-        <img src="../images/html.png" alt="html-logo" class="logo-skill">
-        <img src="../images/css-3.png" alt="css-logo"class="logo-skill">
-        <img src="../images/sass.png" alt="sass-logo"class="logo-skill">
-        <img src="../images/bootstrap.png" alt="bootstrap-logo"class="logo-skill">
-        <img src="../images/js.png" alt="js-logo"class="logo-skill">
-        <img src="../images/science.png" alt="react-logo"class="logo-skill">   
-        <img src="../images/python.png" alt="python-logo"class="logo-skill">  
-        <img src="../images/git.png" alt="git-logo"class="logo-skill">
-        <img src="../images/github4.png" alt="github-logo"class="logo-skill">
+            </div>
+            <div>
+                <img src="../images/sass.png" alt="sass-logo"class="logo-skill">
+                <p class="description-title">SASS</p>
+            </div>
+            <div>
+                <img src="../images/bootstrap.png" alt="bootstrap-logo"class="logo-skill">
+                <p class="description-title">Bootstrap</p>      
+            </div>
+            <div>
+                <img src="../images/js.png" alt="js-logo"class="logo-skill">
+                <p class="description-title">Javascript</p>
+            </div>
+            <div>
+                <img src="../images/science.png" alt="react-logo"class="logo-skill">
+                <p class="description-title">ReactJS</p>
+            </div>
+            <div>
+                <img src="../images/python.png" alt="python-logo"class="logo-skill">
+                <p class="description-title">Python</p>
+            </div>
+            <div>
+                <img src="../images/git.png" alt="git-logo"class="logo-skill">
+                <p class="description-title">Git</p>
+            </div>
+            <div>
+                <img src="../images/github4.png" alt="github-logo"class="logo-skill">
+                <p class="description-title">Github</p>
+            </div>
+
+        </div>
+        
 
     </main>
     <footer>
