--- a/pages/experience.html
+++ b/pages/experience.html
@@ -33,11 +33,11 @@
         <h1>Experience</h1>
         <section class="jobBox">
             <div class="jobContainer">
-                <img src="../images/Technisys-200x200-2.png" alt="technisys-log">
+                <img src="../images/coderhouse.jpg" alt="technisys-log"class="coderhouse">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro dicta quo molestias ut. Eaque minima nemo, corrupti itaque, optio consequuntur cupiditate esse accusantium cumque quidem impedit exercitationem iusto et a?</p>
             </div>
             <div class="jobContainer">
-                <img src="../images/coderhouse.jpg" alt="coderhouse-logo" class="coderhouse">
+                <img src="../images/Technisys-200x200-2.png" alt="coderhouse-logo" class="technisys">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro dicta quo molestias ut. Eaque minima nemo, corrupti itaque, optio consequuntur cupiditate esse accusantium cumque quidem impedit exercitationem iusto et a?</p>
             </div>
         </section>
